--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "npm run lint && jest",
     "build": "browserify --bare -t sheetify/transform -p [ css-extract -o bundle.css ] index.js -o bundle.js",
+    "build-alt": "browserify -t sheetify/transform -t babelify --presets [ env, 'targets': {'browsers': ['last 2 versions']}] -p [ css-extract -o bundle.css ] --standalone chooSlides index.js | uglifyjs -c > bundle.js",
     "prepublishOnly": "npm run build",
     "lint": "standard"
   },
@@ -26,11 +27,14 @@
     "choo": "6.x"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
     "browserify": "^14.5.0",
     "choo": "^6.7.0",
     "css-extract": "^1.2.0",
     "jest": "^22.1.4",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "uglifyify": "^4.0.5"
   },
   "jest": {
     "testEnvironment": "node",
