Update: upgrade bankai

--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,8 @@
     "test-deps": "dependency-check . && dependency-check . --extra --no-dev -i tachyons"
   },
   "dependencies": {
+    "@geut/choo-slides": "latest",
+    "bankai": "^9.14.0",
     "choo": "^6.4.2",
     "choo-devtools": "^2.1.0",
     "choo-service-worker": "^2.3.0",
@@ -18,7 +20,6 @@
     "tachyons": "^4.8.1"
   },
   "devDependencies": {
-    "bankai": "^9.0.0-rc9",
     "choo-scaffold": "^1.1.2",
     "dependency-check": "^2.9.1",
     "standard": "^10.0.3"
